--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,7 @@
         <activemq.version>5.15.13</activemq.version>
         <spring.version>5.2.9.RELEASE</spring.version>
         <karaf.version>4.2.10</karaf.version>
+        <karaf.tesb.version>4.2.10.tesb1</karaf.tesb.version>
         <decanter.version>2.5.0</decanter.version>
         <decanter.tesb.version>2.5.0.tesb1</decanter.tesb.version>
         <zookeeper.version>3.4.14</zookeeper.version>
