--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -115,7 +115,7 @@
                             <descriptors>
                                 <descriptor>mvn:org.talend.esb/features/${project.version}/xml</descriptor>
                                 <descriptor>mvn:org.talend.esb.auxiliary.storage/auxiliary-storage-features/${project.version}/xml</descriptor>
-<!--                                <descriptor>mvn:org.apache.karaf.features/standard/${karaf.version}/xml/features</descriptor>-->
+                                <descriptor>mvn:org.apache.karaf.features/framework/${karaf.tesb.version}/xml/features</descriptor>
                                 <descriptor>file:${basedir}/target/dependencies/standard-${karaf.version}-features.xml</descriptor>
                                 <descriptor>mvn:org.apache.karaf.features/spring/${karaf.version}/xml/features</descriptor>
 <!--                                <descriptor>mvn:org.apache.karaf.features/spring-legacy/${karaf.version}/xml/features</descriptor>-->
