TESB-27204 - Implementation sketch of OIDC for EmpowerID.
Implementation sketch taken from inital pull request submitted for this issue.

--- a/security-common/pom.xml
+++ b/security-common/pom.xml
@@ -52,7 +52,11 @@
             <artifactId>bcprov-jdk15on</artifactId>
             <version>${bouncycastle.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>${commons-collections4.version}</version>
+        </dependency>
         <!-- Test -->
         <dependency>
             <groupId>junit</groupId>
