--- a/job/controller/src/test/data-service-authentication/pom.xml
+++ b/job/controller/src/test/data-service-authentication/pom.xml
@@ -58,9 +58,21 @@
 
 	<repositories>
 		<repository>
-			<id>apache-snapshots</id>
-			<url>https://repository.apache.org/snapshots</url>
-			<name>Apache Snapshots Repo</name>
+			<id>talend-public</id>
+			<name>Talend Open Source Public group</name>
+			<url>https://artifacts-oss.talend.com/nexus/content/groups/public</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</repository>
+		<repository>
+			<!-- require proper credentials-->
+			<id>snapshots</id>
+			<name>Talend private snapshots</name>
+			<url>https://artifacts-zl.talend.com/nexus/content/repositories/snapshots</url>
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
@@ -68,20 +80,29 @@
 				<enabled>false</enabled>
 			</releases>
 		</repository>
-	</repositories>
-
-	<pluginRepositories>
-		<pluginRepository>
-			<id>apache-snapshots</id>
-			<url>https://repository.apache.org/snapshots</url>
-			<name>Apache Snapshots Repo</name>
+		<repository>
+			<!-- require proper credentials-->
+			<id>releases</id>
+			<name>Talend private releases</name>
+			<url>https://artifacts-zl.talend.com/nexus/content/repositories/releases</url>
 			<snapshots>
-				<enabled>true</enabled>
+				<enabled>false</enabled>
 			</snapshots>
 			<releases>
-				<enabled>false</enabled>
+				<enabled>true</enabled>
 			</releases>
-		</pluginRepository>
-	</pluginRepositories>
-
+		</repository>
+		<repository>
+			<!-- require proper credentials-->
+			<id>thirdparty-releases</id>
+			<name>Third party releases</name>
+			<url>https://artifacts-zl.talend.com/nexus/content/repositories/thirdparty-releases</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</repository>
+	</repositories>
 </project>
