--- a/pom.xml
+++ b/pom.xml
@@ -535,53 +535,18 @@
     </reporting>
 
     <repositories>
-        <!-- repository>
-            <id>apache-snapshots</id>
-            <url>http://repository.apache.org/snapshots</url>
-            <name>Apache Snapshots Repo</name>
+        <repository>
+            <id>talend-public</id>
+            <name>Talend Open Source Public group</name>
+            <url>https://artifacts-oss.talend.com/nexus/content/groups/public</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
             <releases>
-                <enabled>false</enabled>
-            </releases>
-        </repository -->
-        <!-- repository>
-            <id>apache-staging</id>
-            <url>https://repository.apache.org/content/groups/staging/</url>
-            <name>Apache Staging Repo</name>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <releases>
                 <enabled>true</enabled>
             </releases>
-        </repository -->
+        </repository>
     </repositories>
-    <pluginRepositories>
-        <!-- pluginRepository>
-            <id>apache-snapshots</id>
-            <url>http://repository.apache.org/snapshots</url>
-            <name>Apache Snapshots Repo</name>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-        </pluginRepository -->
-        <!-- pluginRepository>
-            <id>apache-staging</id>
-            <url>https://repository.apache.org/content/groups/staging/</url>
-            <name>Apache Staging Repo</name>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-        </pluginRepository -->
-    </pluginRepositories>
 
     <distributionManagement>
         <repository>
@@ -614,25 +579,6 @@
             <modules>
                 <module>examples</module>
             </modules>
-        </profile>
-        <profile>
-            <id>artifacts-oss.talend.com</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <repositories>
-                <repository>
-                    <id>artifacts-oss.talend.com/public</id>
-                    <name>Talend Open Source Public group</name>
-                    <url>https://artifacts-oss.talend.com/nexus/content/groups/public</url>
-                    <snapshots>
-                        <enabled>true</enabled>
-                    </snapshots>
-                    <releases>
-                        <enabled>true</enabled>
-                    </releases>
-                </repository>
-            </repositories>
         </profile>
     </profiles>
 </project>
