--- a/pom.xml
+++ b/pom.xml
@@ -534,53 +534,18 @@
     </reporting>
 
     <repositories>
-        <!-- repository>
-            <id>apache-snapshots</id>
-            <url>http://repository.apache.org/snapshots</url>
-            <name>Apache Snapshots Repo</name>
+        <repository>
+            <id>talend-public</id>
+            <name>Talend Open Source Public group</name>
+            <url>https://artifacts-oss.talend.com/nexus/content/groups/public</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
             <releases>
-                <enabled>false</enabled>
-            </releases>
-        </repository -->
-        <!-- repository>
-            <id>apache-staging</id>
-            <url>https://repository.apache.org/content/groups/staging/</url>
-            <name>Apache Staging Repo</name>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <releases>
                 <enabled>true</enabled>
             </releases>
-        </repository -->
+        </repository>
     </repositories>
-    <pluginRepositories>
-        <!-- pluginRepository>
-            <id>apache-snapshots</id>
-            <url>http://repository.apache.org/snapshots</url>
-            <name>Apache Snapshots Repo</name>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-        </pluginRepository -->
-        <!-- pluginRepository>
-            <id>apache-staging</id>
-            <url>https://repository.apache.org/content/groups/staging/</url>
-            <name>Apache Staging Repo</name>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-        </pluginRepository -->
-    </pluginRepositories>
 
     <distributionManagement>
         <repository>
@@ -598,6 +563,9 @@
     <profiles>
         <profile>
             <id>packaging</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <modules>
                 <module>talend-esb</module>
             </modules>
