--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,8 @@
         <activemq.version>5.15.13</activemq.version>
         <spring.version>5.2.9.RELEASE</spring.version>
         <karaf.version>4.2.10</karaf.version>
-        <karaf.tesb.version>4.2.10.tesb1</karaf.tesb.version>
+        <standard.features.tesb.version>4.2.10.tesb1</standard.features.tesb.version>
+        <framework.features.tesb.version>4.2.10.tesb1</framework.features.tesb.version>
         <decanter.version>2.5.0</decanter.version>
         <decanter.tesb.version>2.5.0.tesb1</decanter.tesb.version>
         <zookeeper.version>3.4.14</zookeeper.version>
