--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -571,7 +571,7 @@
                                 <artifactItem>
                                     <groupId>org.apache.karaf.features</groupId>
                                     <artifactId>framework</artifactId>
-                                    <version>${karaf.tesb.version}</version>
+                                    <version>${framework.features.tesb.version}</version>
                                     <type>xml</type>
                                     <classifier>features</classifier>
                                     <outputDirectory>target/dependencies</outputDirectory>
