--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -126,6 +126,10 @@
                         <groupId>org.apache.activemq</groupId>
                         <artifactId>activemq-leveldb-store</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>com.thoughtworks.xstream</groupId>
+                        <artifactId>xstream</artifactId>
+                    </exclusion>
                 </exclusions>
             </dependency>
             <!-- Override the OpenSAML dependency for a security fix -->
@@ -133,6 +137,12 @@
                 <groupId>org.cryptacular</groupId>
                 <artifactId>cryptacular</artifactId>
                 <version>1.2.4</version>
+            </dependency>
+            <!-- Override the Xstream for a CVE issue TESB-32102 -->
+            <dependency>
+                <groupId>com.thoughtworks.xstream</groupId>
+                <artifactId>xstream</artifactId>
+                <version>1.4.15</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
