--- a/examples/camel/jaxws-jms/client/pom.xml
+++ b/examples/camel/jaxws-jms/client/pom.xml
@@ -45,6 +45,12 @@
             <artifactId>activemq-osgi</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <!-- Override the Xstream for a CVE issue TESB-32102 -->
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>${xstream.version}</version>
+        </dependency>
 
         <!-- logging -->
         <dependency>
