--- a/examples/camel/jaxrs-jms-http/client/pom.xml
+++ b/examples/camel/jaxrs-jms-http/client/pom.xml
@@ -74,6 +74,12 @@
             <artifactId>activemq-osgi</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <!-- Override the Xstream for a CVE issue TESB-32102 -->
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>${xstream.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
