--- a/examples/cxf/jaxrs-jms-http/client/pom.xml
+++ b/examples/cxf/jaxrs-jms-http/client/pom.xml
@@ -76,6 +76,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!-- Override the Xstream for a CVE issue TESB-32102 -->
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>${xstream.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.talend.cxf-examples.jaxrs-jms-http</groupId>
