--- a/examples/tesb/camel-jmx/service/pom.xml
+++ b/examples/tesb/camel-jmx/service/pom.xml
@@ -45,6 +45,12 @@
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-osgi</artifactId>
 		</dependency>
+		<!-- Override the Xstream for a CVE issue TESB-32102 -->
+		<dependency>
+			<groupId>com.thoughtworks.xstream</groupId>
+			<artifactId>xstream</artifactId>
+			<version>${xstream.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-camel</artifactId>
