--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -147,6 +147,14 @@
                 <artifactId>cryptacular</artifactId>
                 <version>1.2.4</version>
             </dependency>
+
+            <!-- Override commons-codec dependency for a security fix -->
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${commons-codec.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
