--- a/pom.xml
+++ b/pom.xml
@@ -94,10 +94,11 @@
         <packages.version>${project.version}</packages.version>
         <commons-codec.version>1.14</commons-codec.version>
         <cxf.version>3.3.7</cxf.version>
-        <cxf.tesb.version>3.3.7.tesb1</cxf.tesb.version>
+        <cxf.tesb.version>3.3.7.tesb2</cxf.tesb.version>
         <camel.version>2.25.2</camel.version>
-        <camel.features.tesb.version>2.25.2.tesb3</camel.features.tesb.version>
+        <camel.features.tesb.version>2.25.2.tesb4</camel.features.tesb.version>
         <activemq.version>5.15.13</activemq.version>
+        <activemq.features.tesb.version>5.15.13.tesb1</activemq.features.tesb.version>
         <spring.version>5.2.9.RELEASE</spring.version>
         <karaf.version>4.2.10</karaf.version>
         <standard.features.tesb.version>4.2.10.tesb2</standard.features.tesb.version>
@@ -105,7 +106,7 @@
         <pax-web.version>7.2.19</pax-web.version>
         <pax-web.features.tesb.version>7.2.19.tesb1</pax-web.features.tesb.version>
         <decanter.version>2.5.0</decanter.version>
-        <decanter.tesb.version>2.5.0.tesb1</decanter.tesb.version>
+        <decanter.tesb.version>2.5.0.tesb2</decanter.tesb.version>
         <zookeeper.version>3.4.14</zookeeper.version>
         <derby.version>10.14.2.0</derby.version>
         <derby.servicemix.version>10.14.2.0_2</derby.servicemix.version>
